--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ openai = "^1.3.8"
 fastapi = {extras = ["all"], version = "^0.105.0"}
 pydantic = "^2.5.2"
 tiktoken = "^0.5.2"
+sqlmodel = "^0.0.14"
 
 
 [build-system]
