--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
+langchain==0.0.348 
+python-dotenv==1.0.0
+openai==1.3.8
+fastapi[all]
+pydantic==2.5.2
+tiktoken==0.5.2
+sqlmodel==0.0.14
 streamlit==1.29.0
